@@ -1,0 +1,7 @@
+extern void d (void);
+
+void (*foo (void)) (float)
+{
+  void (*(*x) (void)) (float) = d;
+  return (*x) ();
+}
